apps/guardrail-jobs/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guardrail-jobs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guardrail-jobs
  template:
    metadata:
      labels:
        app: guardrail-jobs
    spec:
      containers:
        - name: guardrail-jobs
          image: ghcr.io/rcaelers/guardrail-jobs:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: config-volume
              mountPath: /etc/guardrail/01-config.yaml
              subPath: 01-config.yaml
            - name: secret-volume
              mountPath: /etc/guardrail/02-secret.yaml
              subPath: 02-secret.yaml
      volumes:
        - name: config-volume
          configMap:
            name: guardrail-config
        - name: secret-volume
          secret:
            secretName: guardrail-secrets
        - name: secret-volume
          secret:
            secretName: guardrail-secrets
