apps/guardrail-jobs/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guardrail-jobs
spec:
  selector:
    app: guardrail-jobs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
